[package]
name = "world_of_yarr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "0.3.24" }
serde = { version = "1.0.145", features = ["derive"] }
specs = { version = "0.18.0", features = ["serde", "derive"] }
specs-derive = { version = "0.4.1" }
bracket-pathfinding = { version = "0.8.4" }

lazy_static = "1.4.0"