[package]
name = "world_of_bevy"
version = "0.1.0"
publish = false
authors = ["nurMatthias <git@engelien.info>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
	"bevy/trace"
]

[dependencies.bevy]
version = "0.8.1"
default-features = false
features = [
  "bevy_asset",         # Assets management
  "bevy_scene",         # Scenes management
  "bevy_gilrs",         # Gamepad input support
  "bevy_winit",         # Window management
  "serialize",          # Support for `serde` Serialize/Deserialize

  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_sprite",        # 2D (sprites) rendering
  "bevy_text",          # Text/font rendering
  "bevy_ui",            # UI toolkit

  # File formats:
  "png",
]

[dependencies]
bevy_asset_loader = { version = "0.12" }
rand = { version = "0.8.3" }

[build-dependencies]
embed-resource = "1.6.3"
